Prevent dark mode flickering

--- a/themes/yblog/assets/css/custom.css
+++ b/themes/yblog/assets/css/custom.css
@@ -155,7 +155,7 @@ footer a:hover, footer a:active {
 #content {
   margin: 5em auto;
   width: 90%;
-  max-width: 50em;
+  max-width: 40em;
 }
 
 .article-title {
